@@ -111,6 +111,8 @@ PAPERCLIP_LICENSE_MODEL = 'test_app.License'
 PAPERCLIP_MAX_ATTACHMENT_WIDTH = 1280
 PAPERCLIP_MAX_ATTACHMENT_HEIGHT = 1280
 PAPERCLIP_MAX_BYTES_SIZE_IMAGE = None
+PAPERCLIP_MIN_ATTACHMENT_WIDTH = None
+PAPERCLIP_MIN_ATTACHMENT_HEIGHT = None
 PAPERCLIP_RESIZE_ATTACHMENTS_ON_UPLOAD = False
 
 # fix for project created django < 3.2
